Add styles to styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,29 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+          <div class="logo">Edfis TV</div>
+          <ul class="li-element">
+            <li>Tv Shows <span class="totalcount">(6)</span></li>
+            <li>Seasons</li>
+            <li>More</li>
+          </ul>
+        </nav>
+      </header>
+
+      <section>
+        <div class="shows-container" id="shows-container"></div>
+  
+        <div class="popup-overlay" id="popupOverlay">
+          <div class="popup-content" id="popupContent">
+            <!-- section to add the close button here -->
+          </div>
+        </div>
+        <footer>
+            <p>This Project is created by Blessing and Fidelis under Microverse CC license</p>
+          </footer>
+    </section>
 
     
       <script src="index.js"></script>
